--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -23,16 +23,16 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">About</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#c99976] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#c99976] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#c99976] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-yellow-500 hover:bg-yellow-600 text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#c99976] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -46,27 +46,27 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-yellow-400 p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="../index.html#home"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏠
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
                     Home</a>
                 <a href="../index.html#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">ℹ️
                     About</a>
                 <a href="leaderboard.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏆
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="staff.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">👥
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">👥
                     Staff</a>
                 <a href="donate.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">💰
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">💰
                     Donate</a>
                 <a href="rules.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">📜
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">📜
                     Rules</a>
                 <a href="recruitment.html"
-                    class="block text-white bg-yellow-500 hover:bg-yellow-600 px-6 py-3 rounded-lg transition-all duration-300">📚
+                    class="block text-white bg-[#c99976] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
         </div>
@@ -81,53 +81,53 @@
                 <div class="recruitmentBox-item">
                     <div class="recruitmentBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">📚 RECRUITMENT <span
-                                class="text-yellow-500">STAFF</span></h1>
+                                class="text-[#c99976]">STAFF</span></h1>
                         <p class="text-gray-400 text-sm mt-2">Join our team and help build a community better!</p>
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
                             <p class="text-sm text-gray-300 text-center">Helps keep the chat atmosphere comfortable and
                                 conducive.</p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
                             <p class="text-sm text-gray-300 text-center">Organize and lead exciting events to community.
                             </p>
-                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
+                            <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
                             <p class="text-sm text-gray-300 text-center">Improve server image in the outside world.</p>
-                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
+                            <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
                             <p class="text-sm text-gray-300 text-center">Plan and run creative events for community.
                             </p>
-                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
+                            <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
                             <p class="text-sm text-gray-300 text-center">Establish cooperation with the community or
                                 other organizations.</p>
-                            <p class="text-xs text-yellow-500 text-center mt-auto">Status : Open</p>
+                            <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
                             <p class="text-sm text-gray-300 text-center">Helps design interesting visual content.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource</h2>
                             <p class="text-sm text-gray-300 text-center">Helps recruit and manage other staff.
                             </p>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="text-center mt-6">
                         <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
-                            class="px-6 py-3 bg-yellow-500 text-white font-bold rounded-lg shadow-lg hover:bg-yellow-600 transition-all">Join
+                            class="px-6 py-3 bg-[#c99976] text-white font-bold rounded-lg shadow-lg hover:bg-[#6d4c35] transition-all">Join
                             Now</a>
                     </div>
                 </div>
@@ -169,15 +169,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
