--- a/pages/donate.html
+++ b/pages/donate.html
@@ -23,16 +23,16 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">About</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#c99976] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#c99976] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#c99976] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-yellow-500 hover:bg-yellow-600 text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#c99976] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -46,27 +46,27 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-yellow-400 p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="../index.html#home"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏠
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
                     Home</a>
                 <a href="../index.html#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">ℹ️
                     About</a>
                 <a href="leaderboard.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏆
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="staff.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">👥
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">👥
                     Staff</a>
                 <a href="donate.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">💰
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">💰
                     Donate</a>
                 <a href="rules.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">📜
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">📜
                     Rules</a>
                 <a href="recruitment.html"
-                    class="block text-white bg-yellow-500 hover:bg-yellow-600 px-6 py-3 rounded-lg transition-all duration-300">📚
+                    class="block text-white bg-[#c99976] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
         </div>
@@ -81,7 +81,7 @@
                 <div class="donateBox-item">
                     <div class="donateBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            💰 SUPPORT US <span class="text-yellow-500">BY DONATE TO SERVER</span>
+                            💰 SUPPORT US <span class="text-[#c99976]">BY DONATE TO SERVER</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Donasi dari kamu bisa membantu kami membangun negeri</p>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="donateBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Donation Option 1 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💷 Contributor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapat role @Contributor</li>
@@ -106,13 +106,13 @@
                                 <p class="text-xs text-gray-400">* Sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-yellow-500">Rp50.000</span>
+                                <span class="text-lg font-bold text-[#c99976]">Rp50.000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 2 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💶 Donator</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Donator</li>
@@ -128,13 +128,13 @@
                                 <p class="text-xs text-gray-400">* sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-yellow-500">Rp10.000</span>
+                                <span class="text-lg font-bold text-[#c99976]">Rp10.000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 3 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💵 Booster</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Booster</li>
@@ -147,13 +147,13 @@
                                 <p class="text-xs text-gray-400">* Buka ticket untuk claim benefit</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-yellow-500">Boost Server</span>
+                                <span class="text-lg font-bold text-[#c99976]">Boost Server</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 4 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💴 Benefactor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Benefactor</li>
@@ -165,13 +165,13 @@
                                 <p class="text-xs text-gray-400">* Ingin berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-yellow-500">1.000.000 UwU</span>
+                                <span class="text-lg font-bold text-[#c99976]">1.000.000 UwU</span>
                             </div>
                         </div>
                     </div>
                     <div class="flex justify-center">
                         <p
-                            class="py-2 px-5  bg-yellow-500 my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-yellow-600">
+                            class="py-2 px-5  bg-[#c99976] my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-[#6d4c35] ">
                             <a href="https://sociabuzz.com/phionne/tribe" target="_blank"
                                 class="text-white font-semibold">Donate
                                 Now</a>
@@ -179,7 +179,7 @@
                     </div>
                     <!-- Donation Log -->
                     <div class="donationLog bg-zinc-900 rounded-lg p-5 mt-10 shadow-lg">
-                        <h2 class="text-lg sm:text-xl font-semibold text-yellow-500 text-center mb-4">📝 Donation Log
+                        <h2 class="text-lg sm:text-xl font-semibold text-[#c99976] text-center mb-4">📝 Donation Log
                         </h2>
                         <div class="overflow-x-auto">
                             <table class="w-full text-left border-collapse">
@@ -219,15 +219,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#6d4c35] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
