--- a/pages/rules.html
+++ b/pages/rules.html
@@ -23,16 +23,16 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">About</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-yellow-500 transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-yellow-500 transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-yellow-500 transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-yellow-500 transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#c99976] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#c99976] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#c99976] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#c99976] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-yellow-500 hover:bg-yellow-600 text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#c99976] hover:bg-[#c99976] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -46,27 +46,27 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-yellow-400 p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="../index.html#home"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏠
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
                     Home</a>
                 <a href="../index.html#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">ℹ️
                     About</a>
                 <a href="leaderboard.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">🏆
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏆
                     Leaderboard</a>
                 <a href="staff.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">👥
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">👥
                     Staff</a>
                 <a href="donate.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">💰
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">💰
                     Donate</a>
                 <a href="rules.html"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-yellow-500 transition-all duration-300">📜
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">📜
                     Rules</a>
                 <a href="recruitment.html"
-                    class="block text-white bg-yellow-500 hover:bg-yellow-600 px-6 py-3 rounded-lg transition-all duration-300">📚
+                    class="block text-white bg-[#c99976] hover:bg-[#6d4c35] px-6 py-3 rounded-lg transition-all duration-300">📚
                     Recruitment</a>
             </div>
         </div>
@@ -80,13 +80,13 @@
                 <div class="rulesBox-item">
                     <div class="rulesBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            📜 <span class="text-yellow-500">SERVER RULES</span>
+                            📜 <span class="text-[#c99976]">SERVER RULES</span>
                         </h1>
                     </div>
 
                     <!-- Rules Card -->
                     <div
-                        class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-full sm:w-96 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400 mx-auto max-w-md">
+                        class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-full sm:w-96 shadow-lg hover:shadow-xl transition-all border-2 border-[#c99976] mx-auto max-w-md">
                         <h2 class="text-lg font-semibold text-white">General Rules</h2>
                         <ul class="text-gray-400 text-sm mt-2 list-disc list-inside">
                             <li>Respect other members</li>
@@ -120,15 +120,15 @@
                     <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
                     <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#c99976] transition transform hover:scale-110">
                             <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#c99976] transition transform hover:scale-110">
                             <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            class="text-[#c99976] hover:text-[#c99976] transition transform hover:scale-110">
                             <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
