--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- Mobile Dropdown Menu -->
             <div id="dropdown-menu"
-                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-yellow-400 p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
+                class="hidden md:hidden absolute top-16 right-4 w-64 bg-black/90 border border-[#c99976] p-4 rounded-xl shadow-lg text-center backdrop-blur-lg transition-all duration-300">
                 <a href="#home"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#c99976] transition-all duration-300">🏠
                     Home</a>
